--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
   height: 100vh;
   background: linear-gradient(to right, #891483, #da2237);
   overflow: hidden;
+  position: relative;
 }
 nav{
   display: flex;
@@ -17,6 +18,8 @@ nav{
   margin: 20px auto;/*marginはブロック要素のみに可能、幅を適用しないと使えない*/
   align-items: center;
   font-weight: 550px;
+  position: sticky;
+  z-index: 1;
 }
 .nav-links{
   flex: 1;
@@ -46,4 +49,94 @@ nav{
 }
 .nav-links ul a:hover{
   color: antiquewhite;
+}
+.information{
+  width: 1000px;
+  height: 1000px;
+  
+  position: absolute;
+  top: 50%;
+  left: -10%;
+  transform: translateY(-50%);/*html.cssの世界では下が➕で上が➖*/
+}
+#circle{
+  width: 1000px;
+  height: 1000px;
+  position: absolute;
+  /* background: #ccc; */
+  border-radius: 50%;
+  top: 0;
+  left: 0;
+  transform: rotate(0deg);
+  transition: 1s;
+}
+.feature{
+  display: flex;
+  position: absolute;
+  color: white;
+}
+.feature img{
+  width: 70px;
+}
+.feature div{
+  margin-left: 20px;
+}
+.feature div a{
+  margin: 8px;
+}
+.one{
+  top: 450px;
+  right: 70px;
+}
+.two{
+  top: 100px;
+  left: 340px;
+  transform: rotate(-90deg);
+}
+.three{
+  bottom: 450px;
+  left: 50px;
+  transform: rotate(-180deg);
+}
+.four{
+  bottom: 150px;
+  right: 370px;
+  transform: rotate(-270deg);
+}
+.pc{
+  width: 400px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 27%;
+  z-index: 1;
+}
+.control{
+  position: absolute;
+  top: 50%;
+  right: 15%;
+  transform: translateY(-50%);
+  text-align: center;
+}
+.control img{
+  width: 15%;
+}
+.control h3{
+  color: #fff;
+  margin: 20px 0;
+}
+#upBtn{
+  cursor: pointer;
+}
+#downBtn{
+  cursor: pointer;
+  transform: rotate(-180deg);
+}
+.overlay{
+  width: 0;
+  height: 0;
+  border-top: 520px solid #fff;
+  border-right: 520px solid transparent;
+  border-left: 520px solid #fff;
+  border-bottom: 520px solid #fff;
 }
